Fix IndicatorConfig constructor binding, optimize AnalysisService transactions, and simplify weekly calculator
- Annotate IndicatorConfig constructor with @Autowired to resolve Spring Boot 3 constructor binding conflict
- Add checkstyle/test fix to YahooFinanceDownloader to stop early and break loop on InterruptedException
- Simplify WeeklyPriceCalculator computeWeeklyPrices() to use TickerRepository.findByIsActiveTrue() directly
- Remove unused latestDailyDate parameter from WeeklyPriceCalculator.processTicker()
- Optimize AnalysisService transactions by declaring getAnalysis() as readOnly=true and computeAndPersist() with Propagation.REQUIRES_NEW