@@ -32,7 +32,7 @@ public class IndicatorController {
       @RequestParam(defaultValue = "0") int page,
       @RequestParam(defaultValue = "250") int size) {
 
-    int finalSize = Math.max(1, Math.min(size, 1000));
+    int finalSize = Math.clamp(size, size, 1000);
     log.info(
         "Request to get {} indicators for ticker: {}, page: {}, size: {}",
         timeframe,
